objects/Application_Wizard_Section__mdt.object
<CustomObject>
    <fields>
        <fullName>Application_Wizard__c</fullName>
        <label>Application Wizard</label>
        <referenceTo>Application_Wizard__mdt</referenceTo>
        <relationshipLabel>Application Wizard Section</relationshipLabel>
        <relationshipName>Application_Wizard_Section</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Fieldset__c</fullName>
        <label>Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navigate_here__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this as the default navigation record.</inlineHelpText>
        <label>Navigate here</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Application_Wizard_Section</relationshipLabel>
        <relationshipName>Application_Wizard_Section</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RelatedId__c</fullName>
        <inlineHelpText>Enter the lookup field to be populated</inlineHelpText>
        <label>Related Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Unique_Id__c</fullName>
        <inlineHelpText>Enter the unique id of the field with which related id will be populated.</inlineHelpText>
        <label>Related Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_Order__c</fullName>
        <inlineHelpText>This is an advance option which enables you to define save order.</inlineHelpText>
        <label>Save Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <label>Section Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Title__c</fullName>
        <label>Section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Wizard Section</label>
    <pluralLabel>Application Wizard Section</pluralLabel>
</CustomObject>